# peewee-erd

./: README.md  pyproject.toml  setup.py
peewee_erd/: __init__.py  erd.dot
