[tool.poetry]
name = "peewee-erd"
version = "0.1.2"
description = "Draw the ER diagram based on peewee models."
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rominf/peewee-erd"

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = {version = "^0.6",python = "<3.7"}
docopt = "^0.6.2"
graphviz = "^0.13.0"
jinja2 = "^2.10"
peewee = "^3.0"
poetry-version = "^0.1.3"
watchdog = "^0.9.0"
PySide2 = {version = "^5.13",optional = true}

[tool.poetry.extras]
live-view = ["PySide2"]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
peewee-erd = 'peewee_erd:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
